Switch to .html.jinja2 templates, fixes #9

--- a/flask_commentease/templates/commentease/macros.html.jinja2
+++ b/flask_commentease/templates/commentease/macros.html.jinja2
@@ -1,4 +1,4 @@
-{%- from "baseframe/forms.html" import renderfield, ajaxform %}
+{%- from "baseframe/forms.html.jinja2" import renderfield, ajaxform %}
 {% macro commentvote(comment, currentuser, commenturl) %}
   <div class="comment-vote">
     {%- set comvote = comment.votes.getvote(currentuser) %}
